crates/ic-hir/tests/snapshots/const_eval_regression_test__const_to_const_assignment_incompatible_types.snap
---
source: crates/ic-hir/tests/const_eval_regression_test.rs
expression: diagnostics
---
⨯: constant 'A' of type string cannot be assigned to int32
  @ test.idl:3:24

 2 │ const string A = "hello";
   │              ˆ 'A' declared as string here
 3 │ const long B = A;
   │                ˆ incompatible types
