crates/ic-hir/tests/snapshots/const_eval_regression_test__enum_initializer_overflow_produces_warning.snap
---
source: crates/ic-hir/tests/const_eval_regression_test.rs
expression: diagnostics
---
!: integer overflow in constant expression
  @ test.idl:4:21

 2 │ enum MyEnum {
 3 │     A = 2147483647,
 4 │     B = A + 1
   │             ˆ overflow
 5 │ };

  * consider using a larger integer type
