crates/ic-hir/tests/snapshots/const_eval_regression_test__enum_initializer_shift_overflow_rejected.snap
---
source: crates/ic-hir/tests/const_eval_regression_test.rs
expression: diagnostics
---
⨯: integer value out of range for 'int32'
  @ test.idl:4:17

 2 │ enum MyEnum {
 3 │     A = 1073741824,
 4 │     B = A << 1
   │         ˆˆˆˆˆˆ out of range
 5 │ };
