crates/ic-hir/tests/snapshots/const_eval_regression_test__negative_infinity_to_int_conversion_fails.snap
---
source: crates/ic-hir/tests/const_eval_regression_test.rs
expression: diagnostics
---
⨯: cannot convert NaN or infinity to integer
  @ test.idl:2:24

 2 │ const long x = (-1.0 / 0.0);
   │                ˆˆˆˆˆˆˆˆˆˆˆˆ invalid float
